syntax = "proto3";
package api_resp;
import "google/protobuf/any.proto";

option go_package = "./;api_resp";

// protoc -I=. --go_out=./ *.proto


// protoc -I=. --dart_out=./dart *.proto google/protobuf/any.proto

message ApiResp {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
}

